---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: ????
  Info:
    - Make the underground heat pipe only heat directly above itself
    - Actually i meant .29 instead of .28
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2024. 12. 22
  Info:
    - Remove `heating_radius = 0` at gunpoint
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2024. 12. 12
  Info:
    - Remove underground heating
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2024. 11. 21
  Info:
    - Add compatibility for mods that *still* reset technology effects (like aai-industry)
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2024. 11. 21
  Info:
    - Fix 1 gap horizontal underground heat pipes not working
    - Add the missing heated sprites
    - Fix the heated sprites not properly rendering
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2024. 11. 21
  Info:
    - Mod portal release
---------------------------------------------------------------------------------------------------
Version: 0.0.7
Date: 2024. 11. 23
  Info:
    - Finally support several tiers (that do not connect obviously)
    - Put the underground heat pipes in their own subgroup
    - Toggle the underground heat pipe recipes based on underground availability
---------------------------------------------------------------------------------------------------
Version: 0.0.6
Date: 2024. 11. 23
  Info:
    - Begin storing pipes to ground in surfacedata
    - Make new struct constructor prettier
    - Attempt to centralize creating and updating the directional heat pipes