@@ -3,7 +3,7 @@
     "title": "Underground heat pipe",
     "description": "Not enough space above ground? underground has free real estate.",
 
-    "version": "2.0.2",
+    "version": "2.0.1",
     "author": "Quezler",
     "factorio_version": "2.0",
 
@@ -18,7 +18,7 @@
     "dependencies": [
         "? newsletter-for-mods-made-by-quezler",
 
-        "base >= 2.0.29",
-        "? space-age >= 2.0.29"
+        "base >= 2.0.25",
+        "? space-age >= 2.0.25"
     ]
 }
