@@ -4,6 +4,7 @@ Date: ????
   Info:
     - Make the underground heat pipe only heat directly above itself
     - Actually i meant .29 instead of .28
+    - Revert "Make the underground heat pipe only heat directly above itself"
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.1
 Date: 2024. 12. 22
